@@ -1,14 +1,14 @@
 package io.github.gms.secure.converter.impl;
 
+import java.util.List;
+
+import org.springframework.data.domain.Page;
+import org.springframework.stereotype.Component;
+
 import io.github.gms.secure.converter.EventConverter;
 import io.github.gms.secure.dto.EventDto;
 import io.github.gms.secure.dto.EventListDto;
 import io.github.gms.secure.entity.EventEntity;
-import org.springframework.data.domain.Page;
-import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Peter Szrnka
@@ -31,7 +31,7 @@ public class EventConverterImpl implements EventConverter {
 
 	@Override
 	public EventListDto toDtoList(Page<EventEntity> resultList, String username) {
-		List<EventDto> results = resultList.stream().map(entity -> toDto(entity, username)).collect(Collectors.toList());
+		List<EventDto> results = resultList.stream().map(entity -> toDto(entity, username)).toList();
 		return EventListDto.builder().resultList(results).totalElements(resultList.getTotalElements()).build();
 	}
 }
