@@ -1,14 +1,14 @@
 package io.github.gms.secure.converter.impl;
 
+import java.util.List;
+
+import org.springframework.data.domain.Page;
+import org.springframework.stereotype.Component;
+
 import io.github.gms.secure.converter.MessageConverter;
 import io.github.gms.secure.dto.MessageDto;
 import io.github.gms.secure.dto.MessageListDto;
 import io.github.gms.secure.entity.MessageEntity;
-import org.springframework.data.domain.Page;
-import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Peter Szrnka
@@ -30,7 +30,7 @@ public class MessageConverterImpl implements MessageConverter {
 
 	@Override
 	public MessageListDto toDtoList(Page<MessageEntity> resultList) {
-		List<MessageDto> results = resultList.toList().stream().map(this::toDto).collect(Collectors.toList());
+		List<MessageDto> results = resultList.toList().stream().map(this::toDto).toList();
 		return MessageListDto.builder().resultList(results).totalElements(resultList.getTotalElements()).build();
 	}
 }
